--- a/style.css
+++ b/style.css
@@ -43,6 +43,19 @@ p{
     padding: 40px 0;
 }
 
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: black;
+    background-color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+
 body{
     width: 100%;
 }
@@ -194,4 +207,105 @@ body{
 
 #feature .feature-box:nth-child(6) h6{
     background-color: #fff2e5;
+}
+
+/* feature product section */
+#featureProduct{
+    text-align: center;
+}
+
+#featureProduct .pro-container{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
+}
+
+#featureProduct .pro{
+    width: 23%;
+    min-width: 250px;
+    padding: 10px 12px;
+    border: 1px solid #cce7d0;
+    border-radius: 25px;
+    cursor: pointer;
+    margin: 15px 0;
+    position: relative;
+}
+
+/* feature pic image resize */
+#featureProduct .pro img{
+    width: 100%;
+    border-radius: 20px;
+}
+
+/* feature product description mod */
+#featureProduct .pro .description{
+    text-align: start;
+    padding: 10px 0;
+}
+
+#featureProduct .pro .description span{
+    color: #606063;
+    font-size: 15px;
+}
+
+#featureProduct .pro .description i{
+    color: rgb(245, 180, 25);
+    font-size: 15px;
+}
+
+#featureProduct .pro .description h4{
+    padding-top: 7px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #088178;
+}
+
+/* feature product cart mod */
+#featureProduct .pro .cart{
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    background-color: #e8f6ea;
+    font-weight: 500;
+    color: #088178;
+    border: 1px solid #cce7d0;
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+}
+
+/* banner */
+#banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url(img/blue-banner-background-image.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
+
+#banner h4{
+    color: #1a1a1a;
+    font-size: 16px;
+}
+
+#banner h2{
+    color: #fff;
+    font-size: 30px;
+    padding: 10px 0;
+}
+
+#banner h2 span{
+    color: #ef3636;
+}
+
+#banner button:hover{
+    background: #088178;
+    color: white;
 }
