--- a/style.css
+++ b/style.css
@@ -48,11 +48,10 @@ button.normal{
     font-weight: 600;
     padding: 15px 30px;
     color: black;
-    background-color: white;
+    background-color: transparent;
+    border-color: black;
     border-radius: 4px;
     cursor: pointer;
-    border: none;
-    outline: none;
     transition: 0.2s;
 }
 
@@ -117,6 +116,15 @@ body{
     left: 20px;
 }
 
+#mobile{
+    display: none;
+    align-items: center;
+}
+
+#close{
+    display: none;
+}
+
 /* Home page */
 #hero{
     background-image: url("img/lionel-messi-277.png");
@@ -165,7 +173,7 @@ body{
 #feature{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -176,7 +184,7 @@ body{
     box-shadow: 10px 10px 20px rgb(130, 0, 255);
     border: 1px solid #cce7d0;
     border-radius: 4px;
-    margin: 15px 0;
+    margin: 15px 15px;
 }
 
 #feature .feature-box h6{
@@ -216,7 +224,7 @@ body{
 
 #featureProduct .pro-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     padding-top: 20px;
     flex-wrap: wrap;
 }
@@ -228,7 +236,7 @@ body{
     border: 1px solid #cce7d0;
     border-radius: 25px;
     cursor: pointer;
-    margin: 15px 0;
+    margin: 15px 15px;
     position: relative;
 }
 
@@ -276,6 +284,11 @@ body{
     right: 10px;
 }
 
+#featureProduct .pro .cart:hover{
+    background: #088178;
+    color: white;
+}
+
 /* banner */
 #banner{
     display: flex;
@@ -308,4 +321,268 @@ body{
 #banner button:hover{
     background: #088178;
     color: white;
+}
+
+/* feature banner */
+#sm-banner{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#sm-banner .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 30px;
+    background-image: url(img/banner/buy-1-get-1-free-sale-banner_1017-28233.webp);
+    min-width: 580px;
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+    margin: 15px 15px;
+}
+
+#sm-banner .banner-box2{
+    background-image: url(img/banner/portrait-young-happy-girl-shows-okay-zero-ok-sign-near-eye-smiling-tilt-head-carefree-positive-joyful-pose-wearing-summer-tshirt-white-background_176420-54458.webp);
+}
+
+#sm-banner button:hover{
+    background: #088178;
+    color: white;
+}
+
+/* banner3 */
+#banner3{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 80px;
+}
+
+#banner3 .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 30px;
+    background-image: url(img/banner/mens_t_shirt_banner.webp);
+    min-width: 30%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+#banner3 .banner-box2{
+    align-items: flex-end;
+    background-image: url(img/banner/curious-man-looks-with-suspicion-interest-aside-points-aside-blank-space-shows-advertisement-product-company-banner-gestures-against-green-wall-wears-glasses-t-shirt_273609-38363.webp);
+}
+
+#banner3 .banner-box2 h2{
+    color: white;
+}
+
+#banner3 .banner-box3{
+    background-image: url(img/banner/young-male-skateboarder-with-mock-up-t-shirt_23-2149137411.webp);
+}
+
+#banner3 .banner-box3 h2{
+    color: black;
+}
+
+/* footer */
+footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+footer .col{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+footer img{
+    height: 100px;
+    width: 100px;
+}
+
+footer .paymentGetways{
+    height: 100px;
+    width: 300px;
+}
+
+footer .logo{
+    margin-bottom: 30px;
+}
+
+footer h4{
+    font-size: 14px;
+    padding-bottom: 20px;
+}
+
+footer p{
+    font-size: 13px;
+    margin: 0 0 8px 0;
+
+}
+
+footer a{
+    font-size: 13px;
+    text-decoration: none;
+    color: #222;
+    margin-bottom: 10px;
+    
+}
+
+footer .follow{
+    margin-top: 20px;
+}
+
+footer .follow i{
+    color: #465b52;
+    padding-right: 4px;
+    cursor: pointer;
+}
+
+footer .follow i:hover,
+footer .a:hover{
+    color: #088178;
+}
+
+footer .copyright{
+    width: 100%;
+    text-align: center;
+}
+
+/* responsive for tablets */
+@media (max-width:799px){
+    #hero {
+        height: 70vh;
+        background-repeat: no-repeat;
+        padding: 0 80px;
+        background-position: top 30% right 5%;
+    }
+
+    #banner3 {
+        height: 100%;
+        width: 100%;
+        padding: 5px;
+    }
+
+}
+
+/* responsive for mobile */
+@media (max-width:477px){
+
+    #header {
+        padding: 10px 30px;
+    }
+
+    #navber {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #E3E6F3;
+        padding: 80px 0 0 10px;
+        transition: 0.3s;
+    }
+
+    #navber.active{
+        right: 0px;
+    }
+
+    #navber li{
+        margin-bottom: 25px;
+    }
+
+    #mobile{
+        display: flex;
+        align-items: center;
+    }
+
+    #mobile i{
+        color: #1a1a1a;
+        font-size: 24px;
+        padding-left: 20px;
+    }
+
+    #close{
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
+
+    #cart-bag{
+        display: none;
+    }
+
+    #hero {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+
+    h2 {
+        font-size: 32px;
+    }
+
+    h1 {
+        font-size: 38px;
+    }
+
+    .section-p1 {
+        padding: 20px;
+    }
+    
+    #feature {
+        justify-content: space-between;
+    }
+
+    #feature .feature-box {
+        width: 155px;
+        margin: 0  0 15px 0;
+    }
+
+    #feature .feature-box img {
+        height: 100px;
+        width: 100px;
+        margin-bottom: 10px;
+    }
+
+    #featureProduct .pro {
+        width: 100%;
+    }
+
+    #sm-banner .banner-box {
+        height: 100%;
+        width: 50%;
+        padding: 150px;
+    }
+
+    #sm-banner .banner-box2 {
+        margin-top: 20px;
+    }
+
+    #banner3 {
+        padding: 0 20px;
+    }
+
+    #banner3 .banner-box {
+        width: 100%;
+    }
+
 }
